force-app/main/default/objects/TrelloSettings__c/TrelloSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trello Settings</label>
</CustomObject>