force-app/main/default/objects/TrelloSettings__c/fields/Api_key__c.field-meta.xml
<CustomField>
    <fullName>Api_key__c</fullName>
    <label>Api key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>