force-app/main/default/objects/TrelloSettings__c/fields/Board_URL__c.field-meta.xml
<CustomField>
    <fullName>Board_URL__c</fullName>
    <label>Board URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>