force-app/main/default/objects/TrelloSettings__c/fields/Trello_Sync_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Trello_Sync_Endpoint__c</fullName>
    <label>Trello Sync Endpoint</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>